# ai_girlfriend

./: .env.example  .gitignore  Cargo.toml  assistants.toml  config.toml  cspell.json  flake.nix  readme.md  tools.py
src/: assistant.rs  audio.rs  config.rs  input.rs  llm.rs  main.rs  orb.rs  shutdown.rs  state.rs  stt.rs  tools.rs  tts.rs  ui.rs  vad.rs
