[package]
name = "local-ml"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cpal = "0.16.0"
rodio = "0.21.1"
regex = "1.12.3"
whisper-rs = "0.15.1"
llama-cpp-2 = "0.1.133"
webrtc-vad = "0.4.0"
ringbuf = "0.4.8"
rubato = "1.0.0"
hound = "3.5.1"
rand = "0.9.2"
crossterm = "0.29.0"
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
encoding_rs = "0.8.35"
